--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,21 @@ dependencies:
   nb_utils: ^6.1.2
   image_picker: ^1.0.7
   flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+
+  #use for create model
+  json_annotation: ^4.8.0
+
+  logger: ^1.3.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Create Model
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
