--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,13 @@ dependencies:
   flutter_spinkit: ^5.2.0
   dropdown_button2: ^2.3.9
   nb_utils: ^6.1.2
-  image_picker: ^1.0.7
-  flutter_bloc: ^8.1.3
+  # image_picker: ^1.0.7
+  image_picker: ^0.7.0
+  # flutter_bloc: ^8.1.3
+  flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  typed_data: ^1.3.2
+  date_format: ^2.0.7
 
   #use for create model
   json_annotation: ^4.8.0
