--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,9 @@ dependencies:
   # added packages
   flutter_spinkit: ^5.2.0
   dropdown_button2: ^2.3.9
-  nb_utils: ^6.1.2
-  # image_picker: ^1.0.7
-  image_picker: ^0.7.0
+  # nb_utils: ^6.1.2
+  image_picker: ^1.0.7
+  # image_picker: ^0.7.0
   # flutter_bloc: ^8.1.3
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
